    - Add getRunResults, getRunResultsPaginated Methods in TestRail::API
    - Cache connections by default for speedups
    - Cache getTests() for getTestByName()
    - Fix warnings when testrail-results encounters 'assigned' results
    - make --cachefile a multi argument in testrail-results
    - add the --perfile argument to testrail-results
    - add the --merged argument to testrail-results

0.038 2017-01-23 TEODESIAN
    - Optimize TestRail::Utils::Find::getResults and testrail-results
    - Add ability to follow POST redirects
    - Don't print stack traces during constructor errors, this can leak auth info into logs
    - Don't override filename in TAP Parser if we already have it
    - Fix issue where non-standard status overrides were not possible
    - Add finder callback to TestRail::Utils::FindTests
    - Add testsuite_id filter to TestRail::API::getChildRunByName
    - Add defect metrics to testrail-results
    - Add version metrics to testrail-results

0.037 2016-08-10 TEODESIAN
    - Fix incorrect POD for TestRail::API::createRunInPlan
    - Add testrail-results binary and TestRail::Utils::Find::getResults.
    - Add TestRail::API::getChildSections, and modify Test::Rail::Parser to recursively search passed sections when spawning runs
    - Change TestRail::API::getSections to cache the sections in a project.
    - Add notices about problems with duplicate entries to POD.
    - Add capability to auto-spawn configurations/groups to App::Prove::Plugin::TestRail and friends when configuration_group is passed

0.036 2016-04-25 TEODESIAN
    - Fix using wrong perl during testsuite when running binaries
    - Silence testsuite for easier diagnosis of issues
    - Fix warnings due to undef comparison in TestRail::Utils::Find
    - Change to using Pod::Usage for help output rather than Pod::Perldoc

0.035 2016-04-23 TEODESIAN
    - Fix testrail-report and testrail-cases broken binary arg passing