@@ -9,6 +9,7 @@ Revision history for Perl module TestRail::API
     - make --cachefile a multi argument in testrail-results
     - add the --perfile argument to testrail-results
     - add the --merged argument to testrail-results
+    - Add platform information and guidance on results_by_version to testrail-results
 
 0.038 2017-01-23 TEODESIAN
     - Optimize TestRail::Utils::Find::getResults and testrail-results
